<resources>
    <string name="app_name">Wall-Ed</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="add_user_text">Ajout d\'un utilisateur</string>
    <string name="add_user_take_picture">Prendre la photo du bracelet</string>
    <string name="user_name">Nom</string>
    <string name="user_firstName">Prénom</string>
    <string name="user_class">Classe</string>
    <string name="user_id">ID</string>
    <string name="add_user_bt">Ajouter l\'utilisateur</string>
    <string name="user_new_session">Nouvelle session</string>
    <string name="user_end_session">Fin de session</string>

    <string name="session_stats_1">Aucun déchet ramassé pour le moment</string>
    <string name="session_stop">Fin de la session</string>
</resources>
