<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.AjoutUtilisateurFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_ajoutUtilisateur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:background="#EEBA20"
                android:padding="25dp"
                android:text="@string/add_user_text"
                android:textColor="#FCFBFB"
                android:textSize="25sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nom_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/user_name"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/prenom_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/user_firstName"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/classe_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/user_class"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/id_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/user_id"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/bt_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/add_user_take_picture"
                android:background="#42AD2F"
                android:textSize="18sp">
            </Button>

            <Button
                android:id="@+id/enregistrement_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:padding="25dp"
                android:text="@string/add_user_bt"
                android:background="#42AD2F"
                android:textSize="18sp" />

        </LinearLayout>

    </ScrollView>
</FrameLayout>